# MosaicLoan

./: .gitattributes  .gitignore  .gitlab-ci.yml  README.md  collection.json  docker-compose.deploy.yml  docker-compose.model-deploy.yml  docker-compose.model.yml  docker-compose.yml  package-lock.json  tash apply stash@{0}
crawl/: Dockerfile  (+2 more)
modeling/: Dockerfile  docker-compose.yml  pyproject.toml
modeling/app/: main.py  model_schema.py
modeling/credit/: .gitignore  Dockerfile
modeling/credit/app/: main.py  model_schema.py
modeling/credit/data/: distribution_info.pkl  extract_distribution.py  imputing_data.py
modeling/credit/models/kmeans_model/metadata/: .part-00000.crc
modeling/credit/models/record_model/metadata/: .part-00000.crc
modeling/credit/scripts/: entrypoint.sh
modeling/data/: temp.py
modeling/models/: final_model.keras
modeling/models/behavior_model/metadata/: .part-00000.crc  part-00000
modeling/models/behavior_model/stages/0_VectorAssembler_393974a5b3f8/metadata/: part-00000
modeling/models/behavior_model/stages/1_StandardScaler_163b7db2a79c/data/: part-00000-39cff779-698c-45b5-92ed-044c1545be97-c000.snappy.parquet
modeling/models/gbt_model/metadata/: part-00000
modeling/models/kmeans_model/metadata/: part-00000
modeling/models/record_model/metadata/: part-00000
modeling/models/timeseries_model/metadata/: .part-00000.crc  part-00000
modeling/news/: .gitignore  Dockerfile
modeling/news/app/: main.py
modeling/news/app/services/: model_service.py
modeling/news/scripts/: entrypoint.sh
modeling/scripts/: entrypoint.sh
(+764 files in other folders)
