[project]
name = "specialized-project"
version = "0.1.0"
description = ""
authors = [
    {name = "이연규",email = "gyoo413@naver.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "numpy (<2.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.1.2"
pytest = "^8.3.5"
httpx = "^0.28.1"

